--- a/index.html
+++ b/index.html
@@ -26,17 +26,22 @@
     device anywhere you like!</p>
 
   <section>
-<img src="./images/icon-music.svg" alt="">
-    <div>
-      <span>Annual Plan </span>
-      <span>$59.99/year</span>
-    </div>
-    
-<div> Change</div>
+<div class="bloco-0">
+  <div class="bloco-1">
+    <img class="musica" src="./images/icon-music.svg" alt="">
+      <div class="bloco-2">
+        <strong class="anuual">Annual Plan </strong>
+        <span class="preco">$59.99/year</span>
+      </div>
+  </div>
+      
+    <a href=""><strong>Change</strong></a>
+
+</div>
 </section>
 
   <input type="button" value="Proceed to Payment">
-  <div>Cancel Order</div>
+  <div class="cancel">Cancel Order</div>
 </article>
  </main>
   
