--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 </section>
 
   <input type="button" value="Proceed to Payment">
-  <div class="cancel">Cancel Order</div>
+  <div class="cancel">
+    <a class="cancel-0" href="">Cancel Order</a>
+  </div>
 </article>
  </main>
   
